@@ -1,3 +1,8 @@
+2010-10-12  Martin Rubey  <martin.rubey@math.uni-hannover.de>
+
+	* contrib/emacs/fricas.el: add LaTeX error handling to
+	fricas-insert-TeX
+
 2010-10-05  Martin Rubey  <martin.rubey@math.uni-hannover.de>
 
 	* src/algebra/combfunc.spad.pamphlet,
